# libbm

./: README  configure.ac
src/: Makefile.am  libbm.c  libbm.h  libbm.pc.in  libbm_example.c
